--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 
 # Ignore bundler config.
 /.bundle
+
+# Ignore API configuration that is stored in .env
 /.env
 
 # Ignore the default SQLite database.
@@ -13,5 +15,5 @@
 /db/*.sqlite3-journal
 
 # Ignore all logfiles and tempfiles.
-/log/*.log
+/log
 /tmp
