better scrivito_pw

--- a/app.json
+++ b/app.json
@@ -7,6 +7,6 @@
   "env": {
     "SCRIVITO_TENANT": "Fill in full key from your CMS API credentials here.",
     "SCRIVITO_API_KEY": "Fill in full key from your CMS API credentials here.",
-    "SCRIVITO_PW": "Choose a password for the demo user."
+    "SCRIVITO_PW": "changeme"
   }
 }
